Fix a bug when LoL participants weren't displayed Fixing fb overflow bug

--- a/wp-content/themes/pentaclick/style.css
+++ b/wp-content/themes/pentaclick/style.css
@@ -306,6 +306,8 @@ body::first-letter { color: #5c66e9; }
     color: #bbb;
     padding: 30px 0 60px 0;
     height: 570px;
+    max-height: 570px;
+    overflow: hidden;
 }
 .fb-like-box {
     float: left;
